--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
                     <li><a href="#">Services</a></li>
                     <li><a href="socailmedia.html">Socail media marketing</a></li>
                     <li><a href="casestudies.html">Case studies</a></li>
-                    <li><a href="aboutus.html">About us</a></li>
+                    <li><a href="https://rightkeyrealty.in/aboutus.html">About us</a></li>
                     <div class="contact-button">
                         <a href="#form-container"><button style="padding: 8px 32px;
     border-radius: 24px;" id="al" aria-label="Name" class="support-button6"
@@ -557,7 +557,7 @@
                 </ul>
             </div>
             <div class="col-lg-3">
-                <h1 class="footer-heading social">Social links</h1>
+                <h1 class="footer-heading1">Social links</h1>
                 <div>
                     <a href="https://www.facebook.com/digitalwintechnologies/"><i class="fa-brands fa-facebook"
                             style="margin-left:10px;font-size:30px;color:#0B0A0A;"></i></a>
