--- a/socailmedia.html
+++ b/socailmedia.html
@@ -352,7 +352,7 @@
            </ul>
        </div>
        <div class="col-lg-3">
-           <h1 class="footer-heading social">Social links</h1>
+           <h1 class="footer-heading1">Social links</h1>
            <div>
                <a href="https://www.facebook.com/digitalwintechnologies/"><i class="fa-brands fa-facebook"
                        style="margin-left:10px;font-size:30px;color:#0B0A0A;"></i></a>
