font and sections case studies

--- a/casestudies.html
+++ b/casestudies.html
@@ -78,8 +78,11 @@
                 </div>
             </div>
         </div>
+        <div class="blog-grid" id="blogGrid">
+            <!-- Cards will be inserted here by JavaScript -->
+        </div>
     </div> 
-
+   
 
 
 
@@ -183,5 +186,6 @@
     </div>
  </footer> -->
  <!--------Footer end----------------->
+ <script src="assets/js/casestudy.js"></script>
     </body>
     </html>
