--- a/index.html
+++ b/index.html
@@ -206,7 +206,7 @@
     <div class="why_digwin">
         <div class="inner_containerDigiwin">
             <div class="leftimg_container">
-                <img src="assets/images/brand.png" width="100" height="100"  alt="">
+                <img src="assets/images/br.png" width="100" height="100"  alt="">
             </div>
             <div class="right_infoContainer">
                 <div class="main_containerSteps">
