--- a/case1.html
+++ b/case1.html
@@ -1,72 +1,336 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="title" content="Generate High-Quality Real Estate Leads | Boost Your Sales">
-    <meta name="description"
-        content="Connect with serious buyers and sellers. Access verified property listings, expert guidance, and advanced lead generation solutions to grow your real estate business.">
-    <meta property="og:title" content="Generate High-Quality Real Estate Leads | Boost Your Sales">
-    <meta property="og:description"
-        content="Expand your real estate business with qualified leads. Find serious buyers and sellers through verified listings and expert support.">
-    <title>Real Estate Lead Generation | Connect with Buyers & Sellers</title>
-    <link rel="stylesheet" href="assets/css/styles.css">
-    <link rel="stylesheet" href="assets/css/responive.css">
-    <link rel="stylesheet" href="assets/css/case.css">
-    <link rel="stylesheet" href="https://site-assets.fontawesome.com/releases/v6.7.2/css/all.css">
-    <link rel="stylesheet" href="https://site-assets.fontawesome.com/releases/v6.7.2/css/sharp-solid.css">
-    <link rel="stylesheet" href="https://site-assets.fontawesome.com/releases/v6.7.2/css/sharp-regular.css">
-    <link rel="stylesheet" href="https://site-assets.fontawesome.com/releases/v6.7.2/css/sharp-duotone-thin.css">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <title>GR Mayoora Case Study</title>
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/aos/2.3.4/aos.css" rel="stylesheet">
+    <style>
+        :root {
+            --gradient-1: linear-gradient(135deg, #1e3c72 0%, #2a5298 100%);
+            --gradient-2: linear-gradient(135deg, #ff758c 0%, #ff7eb3 100%);
+            --surface-color: #f4f6f8;
+            --text-primary: #2d3436;
+            --text-secondary: #636e72;
+            --box-shadow: 10px 10px 20px #d1d9e6, -10px -10px 20px #ffffff;
+        }
+
+        * {
+            margin: 0;
+            padding: 0;
+            box-sizing: border-box;
+        }
+
+        body {
+            font-family: 'Segoe UI', sans-serif;
+            background: var(--surface-color);
+            color: var(--text-primary);
+            line-height: 1.6;
+        }
+
+        .hero {
+            background: var(--gradient-1);
+            color: white;
+            padding: 6rem 2rem;
+            text-align: center;
+            clip-path: polygon(0 0, 100% 0, 100% 85%, 0 100%);
+            margin-bottom: 4rem;
+            background-image: url(
+                assets/images/Mayoora\ 1.png
+            );
+            background-position: center center;
+            background-repeat: no-repeat;
+        }
+
+        .hero h1 {
+            font-size: 3.5rem;
+            font-weight: 800;
+        }
+
+        .container {
+            max-width: 1200px;
+            margin: 0 auto;
+            padding: 0 2rem;
+        }
+
+        .section-title {
+            font-size: 2.5rem;
+            margin-bottom: 2rem;
+            text-align: center;
+            color: #1e3c72;
+            font-weight: 800;
+        }
+
+        .content-section {
+            margin-bottom: 4rem;
+        }
+        .campaigns {
+        display: flex;
+        gap: 2rem;
+        flex-wrap: wrap;
+        justify-content: center;
+    }
+    .campaign-card {
+        background: white;
+        padding: 1.5rem;
+        border-radius: 15px;
+        box-shadow: var(--box-shadow);
+        text-align: center;
+        width: 300px;
+        transition: transform 0.3s ease;
+    }
+    .campaign-card:hover {
+        transform: scale(1.05);
+    }
+    .campaign-card img {
+        width: 100%;
+        border-radius: 10px;
+        margin-bottom: 1rem;
+    }
+    .campaign-card h3 {
+        color: var(--text-primary);
+        font-size: 1.5rem;
+        margin-bottom: 0.5rem;
+    }
+    .campaign-card p {
+        color: var(--text-secondary);
+    }
+    .chart-container {
+            background: white;
+            padding: 2rem;
+            border-radius: 20px;
+            box-shadow: var(--box-shadow);
+            margin: 2rem 0;
+            min-height: 500px;
+        }
+
+        .chart-grid {
+            display: grid;
+            grid-template-columns: 1fr 1fr;
+            gap: 2rem;
+            align-items: center;
+        }
+        .chart-analysis {
+            padding: 1rem;
+        }
+
+        .chart-analysis h3 {
+            color: #1e3c72;
+            margin-bottom: 1rem;
+            font-size: 1.5rem;
+        }
+
+        .analysis-list {
+            list-style: none;
+        }
+
+        .analysis-list li {
+            margin-bottom: 1rem;
+            padding-left: 1.5rem;
+            position: relative;
+        }
+
+        .analysis-list li:before {
+            content: "•";
+            color: #1e3c72;
+            font-weight: bold;
+            position: absolute;
+            left: 0;
+        }
+
+    .animated-chart { transition: transform 0.3s ease; } .animated-chart:hover { transform: scale(1.05); } </style>
 </head>
-
 <body>
-    <header>
-        <nav>
-            <a href="index.html">
-                <div class="hero_section">
-                    <img src="assets/images/header-logo.png" width="140" height="60" alt="Digitalwin">
-                </div>
-            </a>
-            <button class="hamburger" aria-label="Toggle Menu">
-                <span></span>
-                <span></span>
-                <span></span>
-            </button>
-            <div class="menu_items">
-                <ul class="menu_links">
-                    <li><a href="#">Services</a></li>
-                    <li><a href="socailmedia.html">Socail media marketing</a></li>
-                    <li><a href="casestudies.html">Case studies</a></li>
-                    <li><a href="https://rightkeyrealty.in/aboutus.html">About us</a></li>
-                    <div class="contact-button">
-                        <a href="#form-container"><button style="padding: 8px 32px;
-    border-radius: 24px;" id="al" aria-label="Name" class="support-button6"
-                                id="support-button" title="Support">
-                                <span class="arrow-container">
-                                    <i class="fa-solid fa-circle-arrow-up-right"></i>
-                                </span>
-                                <span class="text" style="margin-left: 5px;">Contact</span>
-                            </button></a>
-                    </div>
-                </ul>
-
-            </div>
-
-        </nav>
-    </header>
-    <div style="width: 100%; height: 80vh; background-position: center center; object-fit: cover;" class="top_bannerContainer">
-        
-            <img src="assets/images/high9-slider-2.jpg" alt="">
-        
+    <div class="hero">
+        <div class="container">
+            <h1>GR Mayoora Case Study</h1>
+            <p>A Premium Gated Community's Journey to Marketing Success</p>
+        </div>
     </div>
-    <div class="case_studyHeading">
-        <h2>Project: Anvita High 9 in Tellapur, one of the upcoming under-construction housing societies in Hyderabad.</h2>
+
+    <main class="container">
+        <section class="content-section" data-aos="fade-up">
+<h2 class="section-title">Project Overview</h2>
+<p><strong>Project Name:</strong> GR Mayoora</p>
+<p><strong>Project Location:</strong> Prime residential area in Bangalore, known for its connectivity but faced challenges due to nearby construction sites affecting the ambiance.</p>
+<p><strong>Location Drawbacks:</strong> Noise pollution and temporary roadblocks due to ongoing urban development projects in the vicinity.</p>
+</section>
+        </section>
+
+        <section class="content-section" data-aos="fade-up">
+<h2 class="section-title">Challenges</h2>
+<p>Despite the premium offering, GR Mayoora struggled to reach its target audience effectively due to high competition and fragmented marketing efforts. Additionally, location-related drawbacks such as noise pollution and temporary roadblocks influenced customer perception.</p>
+</section>
+        </section>
+
+        <section class="content-section" data-aos="fade-up">
+<h2 class="section-title">Solutions</h2>
+<p>We implemented a comprehensive digital marketing strategy focusing on hyper-local targeting to emphasize connectivity benefits while downplaying location drawbacks. Engaging creative campaigns were crafted, including virtual tours, influencer collaborations, and community engagement videos, to create a positive narrative around the location.</p>
+</section>
+        </section>
+
+        <section class="content-section" data-aos="fade-up">
+<h2 class="section-title">Results</h2>
+<table border="1" cellpadding="10" cellspacing="0" style="width: 100%; text-align: left;">
+<thead>
+<tr>
+<th>Category</th>
+<th>Details</th>
+<th>Insights</th>
+</tr>
+</thead>
+<tbody>
+<tr>
+<td>Gender Distribution of Leads</td>
+<td>Male: 60%, Female: 40%</td>
+<td>
+<ul>
+<li>Helped tailor communication strategies for better engagement.</li>
+<li>Targeted messaging was customized for different gender segments.</li>
+</ul>
+</td>
+</tr>
+<tr>
+<td>Marketing Budget Allocation</td>
+<td>Facebook Ads: 40%, Google Ads: 35%, Instagram: 15%, Others: 10%</td>
+<td>
+<ul>
+<li>Optimized budget distribution enhanced campaign reach and impact.</li>
+<li>Social media ads were the most effective for lead generation.</li>
+</ul>
+</td>
+</tr>
+<tr>
+<td>Lead Generation Funnel</td>
+<td>Total Leads: 7500, Pre-qualified Leads: 2000, Site Visits: 500, Conversions: 120</td>
+<td>
+<ul>
+<li>Strategic lead nurturing improved conversion rates effectively.</li>
+<li>High drop-off at site visits indicated room for on-ground engagement improvements.</li>
+</ul>
+</td>
+</tr>
+</tbody>
+</table>
+<section class="content-section" data-aos="fade-up">
+    <h2 class="section-title">Creative Campaigns</h2>
+    <div class="campaigns">
+        <div class="campaign-card" data-aos="zoom-in">
+            <img src="assets/images/Mayoora 1.png" alt="Virtual Tour">
+            <h3>Virtual Tours</h3>
+            <p>Immersive 360° virtual tours that allowed potential buyers to explore GR Mayoora remotely.</p>
+        </div>
+        <div class="campaign-card" data-aos="zoom-in" data-aos-delay="200">
+            <img src="assets/images/Mayoora 1.png" alt="Influencer Collaboration">
+            <h3>Influencer Collaborations</h3>
+            <p>Strategic partnerships with real estate influencers to build credibility and reach a wider audience.</p>
+        </div>
+        <div class="campaign-card" data-aos="zoom-in" data-aos-delay="400">
+            <img src="assets/images/Mayoora 1.png" alt="Community Event">
+            <h3>Community Engagement</h3>
+            <p>Local events and activities to foster a sense of belonging among potential buyers.</p>
+        </div>
     </div>
-    </body>
-    </html>
+</section>
+<div class="chart-container">
+  <canvas id="genderChart" class="animated-chart"></canvas>
+</div>
+<div class="chart-container">
+ <canvas id="budgetChart" class="animated-chart"></canvas>
+</div>
+<div class="chart-container">
+ <canvas id="leadChart" class="animated-chart"></canvas>
+</div>
+</section>
+
+        <section class="content-section" data-aos="fade-up">
+            <h2 class="section-title">Conclusion</h2>
+            <p>Through strategic digital marketing and efficient lead management, GR Mayoora achieved exceptional results in lead generation and sales conversion. This case study showcases the power of a well-planned, multi-channel digital marketing approach in the real estate sector.</p>
+        </section>
+    </main>
+
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/aos/2.3.4/aos.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
+    <script>
+
+        document.addEventListener('DOMContentLoaded', function() {
+            AOS.init({ duration: 1000, once: true });
+
+            setTimeout(() => {
+                const genderCtx = document.getElementById('genderChart').getContext('2d');
+                new Chart(genderCtx, {
+                    type: 'pie',
+                    data: {
+                        labels: ['Male', 'Female'],
+                        datasets: [{
+                            data: [60, 40],
+                            backgroundColor: ['#1e3c72', '#ff7eb3'],
+                            borderWidth: 1, hoverOffset: 10
+                        }]
+                    },
+                    options: {
+                        responsive: true, animation: { duration: 1500, easing: 'easeOutBounce' },
+                        maintainAspectRatio: false,
+                        plugins: {
+                            legend: { position: 'bottom' },
+                            title: { display: true, text: 'Gender Distribution of Leads' }
+                        }
+                    }
+                });
+                const budgetCtx = document.getElementById('budgetChart').getContext('2d');
+                const gradientInstagram = budgetCtx.createRadialGradient(250, 250, 100, 250, 250, 400);
+                gradientInstagram.addColorStop(0, '#fdf497');
+                gradientInstagram.addColorStop(0.05, '#fdf497');
+                gradientInstagram.addColorStop(0.45, '#fd5949');
+                gradientInstagram.addColorStop(0.60, '#d6249f');
+                gradientInstagram.addColorStop(0.90, '#285AEB');
+                new Chart(budgetCtx, {
+                    type: 'doughnut',
+                    data: {
+                        labels: ['Facebook Ads', 'Google Ads', 'Instagram', 'Others'],
+                        datasets: [{
+                            data: [40, 35, 15, 10],
+                            backgroundColor: ['#1e3c72', '#ff758c', gradientInstagram, '#2a5298'],
+                            borderWidth: 1, hoverOffset: 10
+                        }]
+                    },
+                    options: {
+                        responsive: true, animation: { duration: 1500, easing: 'easeOutBounce' },
+                        maintainAspectRatio: false,
+                        plugins: {
+                            legend: { position: 'bottom' },
+                            title: { display: true, text: 'Marketing Budget Allocation' }
+                        }
+                    }
+                });
+
+                const leadCtx = document.getElementById('leadChart').getContext('2d');
+                new Chart(leadCtx, {
+                    type: 'bar',
+                    data: {
+                        labels: ['Total Leads', 'Pre-qualified Leads', 'Site Visits', 'Conversions'],
+                        datasets: [{
+                            label: 'Leads & Conversions',
+                            data: [7500, 2000, 500, 120],
+                            backgroundColor: '#1e3c72',
+                            borderRadius: 8
+                        }]
+                    },
+                    options: {
+                        responsive: true, animation: { duration: 1500, easing: 'easeOutBounce' },
+                        maintainAspectRatio: false,
+                        plugins: {
+                            legend: { display: false },
+                            title: { display: true, text: 'Lead Generation Funnel' }
+                        },
+                        scales: {
+                            y: { beginAtZero: true },
+                            x: { grid: { display: false } }
+                        }
+                    }
+                });
+            }, 500);
+        });
+    </script>
+</body>
+</html>
