--- a/case2.html
+++ b/case2.html
@@ -3,15 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>GR Mayoora Case Study</title>
-
+    <title>Anvita high9 Case Study</title>
     <link rel="stylesheet" href="assets/css/styles.css">
-    <link rel="stylesheet" href="assets/css/responive.css">
-   
     <link href="https://cdnjs.cloudflare.com/ajax/libs/aos/2.3.4/aos.css" rel="stylesheet">
     <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
     <script src="assets/js/navbar.js"></script>
-    <script src="assets/js/form.js"></script>
+    <script src="assets/js/"></script>
     <style>
         :root {
             --gradient-1: linear-gradient(135deg, #1e3c72 0%, #2a5298 100%);
@@ -258,7 +255,7 @@ td ul li {
             </button>
             <div class="menu_items">
                 <ul class="menu_links">
-                    <li><a href="#">Services</a></li>
+                    <li><a href="index.html">Services</a></li>
                     <li><a href="socailmedia.html">Socail media marketing</a></li>
                     <li><a href="casestudies.html">Case studies</a></li>
                     <li><a href="https://digitalwin.in/about.html">About us</a></li>
@@ -280,7 +277,7 @@ td ul li {
     </header>
     <!-- <div class="hero">
         <div class="container">
-            <h1>GR Mayoora Case Study</h1>
+            <h1>Anvita high9 Case Study</h1>
             <p>A Premium Gated Community's Journey to Marketing Success</p>
         </div>
     </div> -->
@@ -290,16 +287,16 @@ td ul li {
             <div class="content-section" data-aos="fade-up">
                 <div class="inner_containercase">
                     <h2 class="section-title">Project Overview</h2><br>
-                    <p><strong>Project Name:</strong> GR Mayoora</p>
+                    <p><strong>Project Name:</strong> Anvita High9</p>
                     <br>
-                    <p><strong>Project Location:</strong> Nestled in the tranquil neighborhood of <strong>Suchitra</strong>, these spacious and splendid 2 and 3-bedroom apartments redefine contemporary living.</p>
+                    <p><strong>Project Location:</strong> Prime residential area in Bangalore, known for its connectivity but faced challenges due to nearby construction sites affecting the ambiance.</p>
                 </div>
                  <div class="knw-btn">
                     <button>know more</button>
                  </div>
             </div>
             <div class="img_containercase">
-                <img src="assets/images/Mayoora 1.png" alt="">
+                <img src="assets/images/High9 -3.png" alt="">
             </div>
         </div>
         
@@ -307,7 +304,7 @@ td ul li {
 
         <section class="content-section" data-aos="fade-up">
             <h2 class="section-title">Challenges</h2>
-            <p>Despite the premium offering, GR Mayoora struggled to reach its target audience effectively due to high competition and fragmented marketing efforts. Additionally, location-related drawbacks such as noise pollution and temporary roadblocks influenced customer perception.</p>
+            <p>Despite the premium offering, Anvita high9 struggled to reach its target audience effectively due to high competition and fragmented marketing efforts. Additionally, location-related drawbacks such as noise pollution and temporary roadblocks influenced customer perception.</p>
         </section>
 
         <section class="content-section" data-aos="fade-up">
@@ -364,19 +361,19 @@ td ul li {
     <h2 class="section-title">Creative Campaigns</h2>
     <div class="campaigns">
         <div class="campaign-card" data-aos="zoom-in">
-            <img src="assets/images/Mayoora 1.png" alt="Virtual Tour">
-            <h3>Virtual Tours</h3>
-            <p>Immersive 360° virtual tours that allowed potential buyers to explore GR Mayoora remotely.</p>
+            <img src="assets/images/High9 -3.png" alt="Virtual Tour">
+            <h3>Space</h3>
+            <p>We digitally showcased the 3BHK design for a spacious and immersive experience.</p>
         </div>
         <div class="campaign-card" data-aos="zoom-in" data-aos-delay="200">
-            <img src="assets/images/Mayoora 1.png" alt="Influencer Collaboration">
-            <h3>Influencer Collaborations</h3>
-            <p>Strategic partnerships with real estate influencers to build credibility and reach a wider audience.</p>
+            <img src="assets/images/clubhousehigh9.jpg" alt="Influencer Collaboration">
+            <h3>Club House Creative</h3>
+            <p>Experience the vibrant clubhouse lifestyle with nearby attractions and exclusive amenities.</p>
         </div>
         <div class="campaign-card" data-aos="zoom-in" data-aos-delay="400">
-            <img src="assets/images/Mayoora 1.png" alt="Community Event">
-            <h3>Community Engagement</h3>
-            <p>Local events and activities to foster a sense of belonging among potential buyers.</p>
+            <img src="assets/images/high9locationbased.jpg" alt="Community Event">
+            <h3>Location based</h3>
+            <p>Discover creative highlights of nearby locations tailored just for you.</p>
         </div>
     </div>
 </section>
@@ -387,8 +384,8 @@ td ul li {
    <div class="chart-analysis">
     <h3>Gender Distribution Analysis</h3>
     <ul class="analysis-list">
-        <li><strong>Male Demographic (75%):</strong> Primarily engaged through investment-focused content, showing higher interest in financial aspects and property appreciation potential.</li>
-        <li><strong>Female Demographic (25%):</strong> Demonstrated stronger engagement with lifestyle features, community aspects, and security amenities.</li>
+        <li><strong>Male Demographic (80%):</strong> Primarily engaged through investment-focused content, showing higher interest in financial aspects and property appreciation potential.</li>
+        <li><strong>Female Demographic (20%):</strong> Demonstrated stronger engagement with lifestyle features, community aspects, and security amenities.</li>
         <li><strong>Targeting Strategy:</strong> Customized content delivery based on gender preferences resulted in 35% higher engagement rates.</li>
         <li><strong>Joint Decision Making:</strong> Campaigns targeting both demographics showed 45% higher conversion rates.</li>
     </ul>
@@ -399,8 +396,8 @@ td ul li {
  <div class="chart-analysis">
     <h3>Marketing Budget Allocation Impact</h3>
     <ul class="analysis-list">
-        <li><strong>Meta Ads (75%):</strong> Generated 5,000 leads with a cost per lead of ₹250, primarily targeting families and mature audiences.</li>
-        <li><strong>Google Ads (15%):</strong> Captured 2,500 high-intent leads through search campaigns, focusing on property seekers in specific locations.</li>
+        <li><strong>Meta Ads (65%):</strong> Generated 3,000 leads with a cost per lead of ₹200, primarily targeting families and mature audiences.</li>
+        <li><strong>Google Ads (25%):</strong> Captured 2,500 high-intent leads through search campaigns, focusing on property seekers in specific locations.</li>
         <li><strong>Others (10%):</strong> Complementary channels including email marketing and local events, contributing 500 leads.</li>
     </ul>
 </div>
@@ -410,9 +407,9 @@ td ul li {
  <div class="chart-analysis">
     <h3>Lead Generation Funnel Performance</h3>
     <ul class="analysis-list">
-        <li><strong>Total Leads (15,000):</strong> Achieved through multi-channel marketing with a 15% higher reach than industry average.</li>
-        <li><strong>Pre-qualified Leads (11,500):</strong> 26.7% qualification rate, significantly above the market average of 20%.</li>
-        <li><strong>Site Visits (3,600):</strong> 25% conversion from qualified leads, optimized through personalized follow-ups.</li>
+        <li><strong>Total Leads (6,000):</strong> Achieved through multi-channel marketing with a 15% higher reach than industry average.</li>
+        <li><strong>Pre-qualified Leads (4,800):</strong> 26.7% qualification rate, significantly above the market average of 20%.</li>
+        <li><strong>Site Visits (1,150):</strong> 25% conversion from qualified leads, optimized through personalized follow-ups.</li>
        
     </ul>
 </div>
@@ -421,7 +418,7 @@ td ul li {
 
         <section class="content-section" data-aos="fade-up">
             <h2 class="section-title">Conclusion</h2>
-            <p>Through strategic digital marketing and efficient lead management, GR Mayoora achieved exceptional results in lead generation and sales conversion. This case study showcases the power of a well-planned, multi-channel digital marketing approach in the real estate sector.</p>
+            <p>Through strategic digital marketing and efficient lead management, Anvita high9 achieved exceptional results in lead generation and sales conversion. This case study showcases the power of a well-planned, multi-channel digital marketing approach in the real estate sector.</p>
         </section>
     </main>
     <div id="contactModal" class="modal_form">
@@ -522,7 +519,7 @@ googleGradient.addColorStop(1, '#3876f8');
                     data: {
                         labels: ['Meta Ads', 'Google Ads', 'Others'],
                         datasets: [{
-                            data: [75, 15, 10],
+                            data: [65, 25, 10],
                             backgroundColor: ['#1877F2', gradientInstagram, '#2a5298'],
                             borderWidth: 1, hoverOffset: 10
                         }]
@@ -544,7 +541,7 @@ googleGradient.addColorStop(1, '#3876f8');
                         labels: ['Total Leads', 'Pre-qualified Leads', 'Site Visits'],
                         datasets: [{
                             label: 'Leads & Conversions',
-                            data: [15000, 11500, 3600],
+                            data: [6000, 4800, 1150],
                             backgroundColor: '#1e3c72',
                             borderRadius: 8
                         }]
