final delpoyed code

--- a/index.html
+++ b/index.html
@@ -341,9 +341,10 @@
       <div class="inner_Continaersrvs">
         <div class="srvs_headerContainer">
             <h2>Our Real Estate Marketing Agency Services Include:</h2>
-            <div class="btn_knwm">
-                <button>Know more</button>
+           <a href="https://wa.me/919985585558" target="_blank" rel="noopener noreferrer" style="text-decoration: none;"><div class="btn_knwm">
+                <button>contact now</button>
             </div>
+        </a> 
         </div>
         <div class="right_containersrvs">
             <div class="srvs_container">
@@ -523,9 +524,10 @@
                             Generating leads is easy, but converting them into loyal customers takes expertise. Partner with us for real results!
                         </p>
                 </div>
-                <div class="bt_knwm">
+                <a href="https://wa.me/919985585558" target="_blank">  <div class="bt_knwm">
                     <button>Know more</button>
                 </div>
+                </a>
             </div>
             <div class="contact_imgContainer">
                 <img src="assets/images/bwink_spt_02_single_02.jpg" width="350" height="300" alt="contact">
@@ -638,7 +640,7 @@
             </form>
         </div>
     </div> 
-    <a href="https://wa.me/919985585558" class="whatsapp-link" target="_blank">
+<a href="https://wa.me/919700329901" class="whatsapp-link" target="_blank">
         <img src="assets/images/whatsapp_img.png" width="100" height="100" alt="WhatsApp Icon" class="whatsapp-image">
       </a>
     <script>
@@ -773,6 +775,13 @@
     <script src="assets/js/gsapanimate.js"></script>
     <script src="assets/js/testimonals.js"></script>
     <script src="assets/js/form.js"></script>
+    <script>
+        document.querySelector(".knw-btn").addEventListener("click", function () {
+  document
+    .querySelector(".abtcmpy_innerContainer")
+    .scrollIntoView({ behavior: "smooth" });
+});
+    </script>
 </body>
 
 </html>
