--- a/case3.html
+++ b/case3.html
@@ -361,19 +361,19 @@ td ul li {
     <h2 class="section-title">Creative Campaigns</h2>
     <div class="campaigns">
         <div class="campaign-card" data-aos="zoom-in">
-            <img src="assets/images/Mayoora 1.png" alt="Virtual Tour">
-            <h3>Virtual Tours</h3>
-            <p>Immersive 360° virtual tours that allowed potential buyers to explore Kapil properties remotely.</p>
+            <img src="assets/images/kapilcreative-1.jpeg" alt="Virtual Tour">
+            <h3>Investment reminders</h3>
+            <p>We elevated investment reminders to the next level with this creative</p>
         </div>
         <div class="campaign-card" data-aos="zoom-in" data-aos-delay="200">
-            <img src="assets/images/Mayoora 1.png" alt="Influencer Collaboration">
-            <h3>Influencer Collaborations</h3>
-            <p>Strategic partnerships with real estate influencers to build credibility and reach a wider audience.</p>
+            <img src="assets/images/kapilcreative-2.jpeg" alt="Influencer Collaboration">
+            <h3>Easy returns</h3>
+            <p>We enhanced investment insights with this creative to highlight smarter returns!</p>
         </div>
         <div class="campaign-card" data-aos="zoom-in" data-aos-delay="400">
-            <img src="assets/images/Mayoora 1.png" alt="Community Event">
-            <h3>Community Engagement</h3>
-            <p>Local events and activities to foster a sense of belonging among potential buyers.</p>
+            <img src="assets/images/kapilcreative-3.jpeg" alt="Community Event">
+            <h3>ROI creative</h3>
+            <p>We took ROI storytelling to the next level with this creative for maximum impact!</p>
         </div>
     </div>
 </section>
