--- a/case1.html
+++ b/case1.html
@@ -364,19 +364,21 @@ td ul li {
     <h2 class="section-title">Creative Campaigns</h2>
     <div class="campaigns">
         <div class="campaign-card" data-aos="zoom-in">
-            <img src="assets/images/Mayoora 1.png" alt="Virtual Tour">
-            <h3>Virtual Tours</h3>
-            <p>Immersive 360° virtual tours that allowed potential buyers to explore GR Mayoora remotely.</p>
+            <img src="assets/images/GR mayoora-1.jpeg" alt="Virtual Tour">
+            <h3>Price</h3>
+            <p>We elevated price visibility in the above creative to make it more engaging for customers, helping us generate more leads!</p>
         </div>
         <div class="campaign-card" data-aos="zoom-in" data-aos-delay="200">
-            <img src="assets/images/Mayoora 1.png" alt="Influencer Collaboration">
-            <h3>Influencer Collaborations</h3>
-            <p>Strategic partnerships with real estate influencers to build credibility and reach a wider audience.</p>
+            <img src="assets/images/GR mayoora-2.jpeg" alt="Influencer Collaboration">
+            <h3>Amenities</h3>
+            <p>We highlighted top-notch amenities in the above creative to attract potential buyers and enhance engagement!
+
+            </p>
         </div>
         <div class="campaign-card" data-aos="zoom-in" data-aos-delay="400">
-            <img src="assets/images/Mayoora 1.png" alt="Community Event">
-            <h3>Community Engagement</h3>
-            <p>Local events and activities to foster a sense of belonging among potential buyers.</p>
+            <img src="assets/images/GR mayoora-3.jpeg" alt="Community Event">
+            <h3>Location</h3>
+            <p>We showcased the prime location in the above creative, making it easier for customers to see the value and drive more inquiries!</p>
         </div>
     </div>
 </section>
