--- a/socailmedia.html
+++ b/socailmedia.html
@@ -304,9 +304,9 @@
                     Generating leads is easy, but converting them into loyal customers takes expertise. Partner with us for real results!
                 </p>
         </div>
-           <div class="bt_knwm">
-               <button>Know more</button>
-           </div>
+        <a href="https://wa.me/919985585558" target="_blank">  <div class="bt_knwm">
+            <button>Know more</button>
+        </div>
        </div>
        <div class="contact_imgContainer">
            <img src="assets/images/bwink_spt_02_single_02.jpg" width="350" height="300" alt="contact">
